--- a/ai-projects.html
+++ b/ai-projects.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ИИ в образовании - материалы, созданные с использованием искусственного интеллекта">
     <title>ИИ в образовании | Дёмин А.Ю.</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
             --color-primary: #003D7A;
             --color-primary-hover: #00518A;
@@ -25,252 +19,40 @@
             --color-text-secondary: #7F8C8D;
             --color-border: #E0E6ED;
         }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 16px;
-            line-height: 1.6;
-            color: var(--color-text-primary);
-            background-color: var(--color-background);
-        }
-
-        header {
-            background-color: var(--color-primary);
-            color: white;
-            padding: 0;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .header-top {
-            background-color: var(--color-primary-active);
-            padding: 0.5rem 0;
-        }
-
-        .header-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .header-title {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-        }
-
-        .header-photo {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 3px solid white;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-        }
-
-        .header-title h1 {
-            font-size: 1.5rem;
-            font-weight: 700;
-        }
-
-        .header-subtitle {
-            font-size: 0.9rem;
-            opacity: 0.9;
-        }
-
-        .mobile-menu-toggle {
-            display: none;
-            background: none;
-            border: none;
-            color: white;
-            font-size: 1.5rem;
-            cursor: pointer;
-            padding: 0.5rem;
-        }
-
-        nav {
-            background-color: var(--color-primary);
-        }
-
-        .nav-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-        }
-
-        .nav-menu {
-            list-style: none;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-        }
-
-        .nav-menu a {
-            color: white;
-            text-decoration: none;
-            padding: 1rem 1rem;
-            display: block;
-            transition: background-color 0.3s ease;
-            border-radius: 4px 4px 0 0;
-        }
-
-        .nav-menu a:hover {
-            background-color: var(--color-primary-hover);
-        }
-
-        .nav-menu a.active {
-            background-color: var(--color-danger);
-        }
-
-        main {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 3rem 1rem;
-        }
-
-        .page-title {
-            font-size: 2.5rem;
-            color: var(--color-primary);
-            margin-bottom: 2rem;
-            padding-bottom: 1rem;
-            border-bottom: 4px solid var(--color-danger);
-        }
-
-        .page-intro {
-            font-size: 1.1rem;
-            margin-bottom: 2rem;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            padding: 1.5rem;
-            border-radius: 8px;
-            border-left: 4px solid var(--color-primary);
-        }
-
-        .section {
-            margin-bottom: 3rem;
-        }
-
-        .section h2 {
-            font-size: 2rem;
-            color: var(--color-primary);
-            margin-bottom: 1.5rem;
-        }
-
-        .card {
-            background-color: var(--color-surface);
-            padding: 2rem;
-            border-radius: 8px;
-            border-left: 4px solid var(--color-primary);
-            margin-bottom: 2rem;
-        }
-
-        .card h3 {
-            color: var(--color-primary);
-            margin-bottom: 1rem;
-        }
-
-        .content-block {
-            background: white;
-            padding: 1.5rem;
-            border-radius: 8px;
-            margin-top: 1rem;
-            border: 2px solid var(--color-border);
-        }
-
-        .content-block h4 {
-            color: var(--color-primary);
-            margin-bottom: 1rem;
-        }
-
-        .author-meta {
-            margin-top: 1rem;
-            font-size: 0.9rem;
-            color: var(--color-text-secondary);
-            padding-top: 1rem;
-            border-top: 1px solid var(--color-border);
-        }
-
-        .warning-box {
-            margin-top: 1.5rem;
-            padding: 1rem;
-            background: #FFF3CD;
-            border-left: 4px solid var(--color-warning);
-            border-radius: 4px;
-        }
-
-        footer {
-            background-color: var(--color-primary);
-            color: white;
-            padding: 2rem 1rem;
-            margin-top: 4rem;
-        }
-
-        .footer-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-        }
-
-        .footer-section h3 {
-            margin-bottom: 1rem;
-        }
-
-        .footer-section ul {
-            list-style: none;
-        }
-
-        .footer-section a {
-            color: white;
-            text-decoration: none;
-            opacity: 0.9;
-        }
-
-        .footer-section a:hover {
-            opacity: 1;
-            text-decoration: underline;
-        }
-
-        .footer-bottom {
-            max-width: 1200px;
-            margin: 2rem auto 0;
-            padding-top: 2rem;
-            border-top: 1px solid rgba(255,255,255,0.2);
-            text-align: center;
-            font-size: 0.9rem;
-            opacity: 0.8;
-        }
-
-        @media (max-width: 768px) {
-            .mobile-menu-toggle {
-                display: block;
-            }
-
-            .nav-menu {
-                display: none;
-                flex-direction: column;
-            }
-
-            .nav-menu.active {
-                display: flex;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .header-photo {
-                width: 50px;
-                height: 50px;
-            }
-
-            .header-title h1 {
-                font-size: 1.2rem;
-            }
-        }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6; color: var(--color-text-primary); }
+        header { background-color: var(--color-primary); color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
+        .header-top { background-color: var(--color-primary-active); padding: 0.5rem 0; }
+        .header-content { max-width: 1200px; margin: 0 auto; padding: 0 1rem; display: flex; justify-content: space-between; align-items: center; }
+        .header-title { display: flex; align-items: center; gap: 1rem; }
+        .header-photo { width: 60px; height: 60px; border-radius: 50%; object-fit: cover; border: 3px solid white; box-shadow: 0 2px 8px rgba(0,0,0,0.2); }
+        .header-title h1 { font-size: 1.5rem; font-weight: 700; }
+        .header-subtitle { font-size: 0.9rem; opacity: 0.9; }
+        .mobile-menu-toggle { display: none; background: none; border: none; color: white; font-size: 1.5rem; cursor: pointer; }
+        nav { background-color: var(--color-primary); }
+        .nav-container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
+        .nav-menu { list-style: none; display: flex; flex-wrap: wrap; gap: 0.5rem; }
+        .nav-menu a { color: white; text-decoration: none; padding: 1rem 1rem; display: block; transition: background-color 0.3s ease; border-radius: 4px 4px 0 0; }
+        .nav-menu a:hover { background-color: var(--color-primary-hover); }
+        .nav-menu a.active { background-color: var(--color-danger); }
+        main { max-width: 1200px; margin: 0 auto; padding: 3rem 1rem; }
+        .page-title { font-size: 2.5rem; color: var(--color-primary); margin-bottom: 1rem; padding-bottom: 1rem; border-bottom: 4px solid var(--color-danger); }
+        .page-intro { font-size: 1.1rem; margin-bottom: 2rem; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); padding: 1.5rem; border-radius: 8px; border-left: 4px solid var(--color-primary); }
+        .section { margin-bottom: 3rem; }
+        .section h2 { font-size: 2rem; color: var(--color-primary); margin-bottom: 1.5rem; }
+        .card { background-color: var(--color-surface); padding: 2rem; border-radius: 8px; border-left: 4px solid var(--color-primary); margin-bottom: 2rem; }
+        .card h3 { color: var(--color-primary); margin-bottom: 1rem; }
+        .content-block { background: white; padding: 1.5rem; border-radius: 8px; margin-top: 1rem; border: 2px solid var(--color-border); }
+        .content-block h4 { color: var(--color-primary); margin-bottom: 1rem; }
+        .author-meta { margin-top: 1rem; font-size: 0.9rem; color: var(--color-text-secondary); padding-top: 1rem; border-top: 1px solid var(--color-border); }
+        .warning-box { margin-top: 1.5rem; padding: 1rem; background: #FFF3CD; border-left: 4px solid var(--color-warning); border-radius: 4px; }
+        footer { background-color: var(--color-primary); color: white; padding: 2rem 1rem; margin-top: 4rem; }
+        .footer-content { max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; }
+        .footer-section h3 { margin-bottom: 1rem; }
+        .footer-section ul { list-style: none; }
+        .footer-section a { color: white; text-decoration: none; opacity: 0.9; }
+        .footer-bottom { max-width: 1200px; margin: 2rem auto 0; padding-top: 2rem; border-top: 1px solid rgba(255,255,255,0.2); text-align: center; font-size: 0.9rem; opacity: 0.8; }
+        @media (max-width: 768px) { .mobile-menu-toggle { display: block; } .nav-menu { display: none; flex-direction: column; } .nav-menu.active { display: flex; } }
+        @media (max-width: 480px) { .header-photo { width: 50px; height: 50px; } .header-title h1 { font-size: 1.2rem; } }
     </style>
 </head>
 <body>
@@ -279,123 +61,47 @@
             <div class="header-content">
                 <div class="header-title">
                     <!-- Эмблема с lightbox -->
-                    <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" onclick="openLightbox()" style="width: 80px; height: 80px; margin-right: 1rem; object-fit: contain; filter: drop-shadow(0 3px 10px rgba(0,0,0,0.25)); cursor: pointer; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+<img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" onclick="openLightbox()" style="width: 80px; height: 80px; margin-right: 1rem; object-fit: contain; filter: drop-shadow(0 3px 10px rgba(0,0,0,0.25)); cursor: pointer; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
 
-                    <!-- Lightbox overlay -->
-                    <div id="emblem-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9999; justify-content: center; align-items: center;" onclick="closeLightbox()">
-                        <span style="position: absolute; top: 20px; right: 40px; color: white; font-size: 40px; font-weight: bold; cursor: pointer; transition: color 0.3s;" onmouseover="this.style.color='#E53935'" onmouseout="this.style.color='white'">&times;</span>
-                        <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" style="max-width: 80%; max-height: 80%; object-fit: contain; animation: zoomIn 0.3s ease;" onclick="event.stopPropagation()">
-                    </div>
+<!-- Lightbox overlay -->
+<div id="emblem-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9999; justify-content: center; align-items: center;" onclick="closeLightbox()">
+    <span style="position: absolute; top: 20px; right: 40px; color: white; font-size: 40px; font-weight: bold; cursor: pointer; transition: color 0.3s;" onmouseover="this.style.color='#E53935'" onmouseout="this.style.color='white'">&times;</span>
+    <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" style="max-width: 80%; max-height: 80%; object-fit: contain; animation: zoomIn 0.3s ease;" onclick="event.stopPropagation()">
+</div>
 
+<style>
+@keyframes zoomIn {
+    from {
+        transform: scale(0.7);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+</style>
+
+<script>
+function openLightbox() {
+    document.getElementById('emblem-lightbox').style.display = 'flex';
+    document.body.style.overflow = 'hidden'; // Блокируем скролл
+}
+
+function closeLightbox() {
+    document.getElementById('emblem-lightbox').style.display = 'none';
+    document.body.style.overflow = 'auto'; // Возвращаем скролл
+}
+
+// Закрытие по клавише Escape
+document.addEventListener('keydown', function(event) {
+    if (event.key === 'Escape') {
+        closeLightbox();
+    }
+});
+</script>
                     <div>
-                        <h1>Дёмин Александр Юрьевич</h1>
-                        <p class="header-subtitle">Преподаватель-организатор ОБЗР | МБОУ СШ № 2 г. Лысково</p>
-                    </div>
-                </div>
-                <button class="mobile-menu-toggle" onclick="toggleMenu()">☰</button>
-            </div>
-        </div>
-        
-        <nav>
-            <div class="nav-container">
-                <ul class="nav-menu" id="navMenu">
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="about.html">О себе</a></li>
-                    <li><a href="portfolio.html">Портфолио</a></li>
-                    <li><a href="metodika.html">Методика</a></li>
-                    <li><a href="ai-projects.html" class="active">ИИ в образовании</a></li>
-                    <li><a href="vneurochnaya.html">Активности</a></li>
-                    <li><a href="parents.html">Родителям</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
 
-    <main>
-        <h1 class="page-title">🤖 ИИ в образовании</h1>
-        
-        <div class="page-intro">
-            <p><strong>Искусственный интеллект как инструмент современного образования</strong></p>
-            <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Midjourney, Suno AI, Perplexity и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
-        </div>
-
-        <!-- ЗДЕСЬ БУДЕТ ОСТАЛЬНОЙ КОНТЕНТ СТРАНИЦЫ -->
-
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Навигация</h3>
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="about.html">О себе</a></li>
-                    <li><a href="portfolio.html">Портфолио</a></li>
-                    <li><a href="metodika.html">Методика</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Ресурсы</h3>
-                <ul>
-                    <li><a href="ai-projects.html">ИИ в образовании</a></li>
-                    <li><a href="vneurochnaya.html">Активности</a></li>
-                    <li><a href="parents.html">Родителям</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Контакты</h3>
-                <ul>
-                    <li>МБОУ СШ № 2 г. Лысково</li>
-                    <li>Email: [email защищён]</li>
-                    <li>Телефон: [номер]</li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            © 2025 Дёмин А.Ю. | Преподаватель-организатор ОБЗР
-        </div>
-    </footer>
-
-    <style>
-    @keyframes zoomIn {
-        from {
-            transform: scale(0.7);
-            opacity: 0;
-        }
-        to {
-            transform: scale(1);
-            opacity: 1;
-        }
-    }
-    </style>
-
-    <script>
-    function openLightbox() {
-        document.getElementById('emblem-lightbox').style.display = 'flex';
-        document.body.style.overflow = 'hidden'; // Блокируем скролл
-    }
-
-    function closeLightbox() {
-        document.getElementById('emblem-lightbox').style.display = 'none';
-        document.body.style.overflow = 'auto'; // Возвращаем скролл
-    }
-
-    // Закрытие по клавише Escape
-    document.addEventListener('keydown', function(event) {
-        if (event.key === 'Escape') {
-            closeLightbox();
-        }
-    });
-
-    function toggleMenu() {
-        const navMenu = document.getElementById('navMenu');
-        navMenu.classList.toggle('active');
-    }
-    </script>
-</body>
-</html>
                         <h1>Дёмин Александр Юрьевич</h1>
                         <p class="header-subtitle">Преподаватель-организатор ОБЗР | МБОУ СШ № 2 г. Лысково</p>
                     </div>
