--- a/ai-projects.html
+++ b/ai-projects.html
@@ -6,7 +6,6 @@
     <meta name="description" content="ИИ в образовании - материалы, созданные с использованием искусственного интеллекта">
     <title>ИИ в образовании | Дёмин А.Ю.</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
             --color-primary: #003D7A;
             --color-primary-hover: #00518A;
@@ -20,65 +19,82 @@
             --color-text-secondary: #7F8C8D;
             --color-border: #E0E6ED;
         }
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6; color: var(--color-text-primary); }
-header {
-    background-color: var(--color-primary);
-    color: white;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    position: fixed;
-    top: 0;
-    left: 0;       
-    z-index: 1000;
-    width: 100vw; 
-    margin: 0;
-    padding: 0;              
-}
-.header-top {
-    background-color: var(--color-primary-active);
-    padding: 0.5rem 0;
-    width: 100vw;
-    margin: 0;
-    left: 0;
-    position: relative;
-}
-.header-content {
-    max-width: 1200px; 
-    margin: 0 auto;
-    padding: 0 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 16px;
+            line-height: 1.6;
+            color: var(--color-text-primary);
+        }
+        header {
+            background-color: var(--color-primary);
+            color: white;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            width: 100vw;
+            margin: 0;
+            padding: 0;
+            left: 0;
+        }
+        .header-top {
+            background-color: var(--color-primary-active);
+            padding: 0.5rem 0;
+            width: 100vw;
+            margin: 0;
+            left: 0;
+            position: relative;
+        }
+        .header-content {
+            max-width: 1200px; 
+            margin: 0 auto;
+            padding: 0 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
         .header-title { display: flex; align-items: center; gap: 1rem; }
         .header-photo { width: 60px; height: 60px; border-radius: 50%; object-fit: cover; border: 3px solid white; box-shadow: 0 2px 8px rgba(0,0,0,0.2); }
         .header-title h1 { font-size: 1.5rem; font-weight: 700; }
         .header-subtitle { font-size: 0.9rem; opacity: 0.9; }
         .mobile-menu-toggle { display: none; background: none; border: none; color: white; font-size: 1.5rem; cursor: pointer; }
-nav {
-    background-color: var(--color-primary);
-    width: 100vw;
-    margin: 0;
-    left: 0; 
-    position: relative;
-}
-.nav-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1rem;
-}
+        nav {
+            background-color: var(--color-primary);
+            width: 100vw;
+            margin: 0;
+            left: 0;
+            position: relative;
+        }
+        .nav-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 1rem;
+        }
         .nav-menu { list-style: none; display: flex; flex-wrap: wrap; gap: 0.5rem; }
         .nav-menu a { color: white; text-decoration: none; padding: 1rem 1rem; display: block; transition: background-color 0.3s ease; border-radius: 4px 4px 0 0; }
         .nav-menu a:hover { background-color: var(--color-primary-hover); }
         .nav-menu a.active { background-color: var(--color-danger); }
-        main { max-width: 1200px; margin: 0 auto; padding: 3rem 1rem; }
-.page-title {
-    font-size: 2.5rem;
-    color: var(--color-primary);
-    margin-bottom: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 4px solid var(--color-danger);
-    text-align: center; /* или то, что нужно по стилю */
-}
+        main {
+            flex: 1 0 auto;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 3rem 1rem;
+            width: 100%;
+        }
+        .page-title {
+            font-size: 2.5rem;
+            color: var(--color-primary);
+            margin-bottom: 1rem;
+            padding-bottom: 1rem;
+            border-bottom: 4px solid var(--color-danger);
+            text-align: center;
+        }
         .page-intro { font-size: 1.1rem; margin-bottom: 2rem; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); padding: 1.5rem; border-radius: 8px; border-left: 4px solid var(--color-primary); }
         .section { margin-bottom: 3rem; }
         .section h2 { font-size: 2rem; color: var(--color-primary); margin-bottom: 1.5rem; }
@@ -88,39 +104,39 @@ nav {
         .content-block h4 { color: var(--color-primary); margin-bottom: 1rem; }
         .author-meta { margin-top: 1rem; font-size: 0.9rem; color: var(--color-text-secondary); padding-top: 1rem; border-top: 1px solid var(--color-border); }
         .warning-box { margin-top: 1.5rem; padding: 1rem; background: #FFF3CD; border-left: 4px solid var(--color-warning); border-radius: 4px; }
-footer {
-    background-color: var(--color-primary);
-    color: white;
-    width: 100vw
-    padding: 2rem 0; 
-    margin-top: auto;     
-    margin: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 1000;
-}
- .footer-content {
-    max-width: 1200px; 
-    margin: 0 auto;
-    padding: 0 1rem; 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
-} 
+        footer {
+            background-color: var(--color-primary);
+            color: white;
+            width: 100vw;
+            margin: 0;
+            margin-top: auto;
+            padding: 2rem 0; 
+            left: 0;
+            position: relative;
+            box-sizing: border-box;
+        }
+        .footer-content {
+            max-width: 1200px; 
+            margin: 0 auto;
+            padding: 0 1rem; 
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+        } 
         .footer-section h3 { margin-bottom: 1rem; }
         .footer-section ul { list-style: none; }
         .footer-section a { color: white; text-decoration: none; opacity: 0.9; }
-       .footer-bottom {
-    max-width: 1200px; 
-    margin: 2rem auto 0;
-    padding-top: 2rem;
-    padding-left: 1rem; 
-    padding-right: 1rem; 
-    border-top: 1px solid rgba(255,255,255,0.2);
-    text-align: center;
-    font-size: 0.9rem;
-    opacity: 0.8;
-}
+        .footer-bottom {
+            max-width: 1200px; 
+            margin: 2rem auto 0;
+            padding-top: 2rem;
+            padding-left: 1rem; 
+            padding-right: 1rem; 
+            border-top: 1px solid rgba(255,255,255,0.2);
+            text-align: center;
+            font-size: 0.9rem;
+            opacity: 0.8;
+        }
         @media (max-width: 768px) { .mobile-menu-toggle { display: block; } .nav-menu { display: none; flex-direction: column; } .nav-menu.active { display: flex; } }
         @media (max-width: 480px) { .header-photo { width: 50px; height: 50px; } .header-title h1 { font-size: 1.2rem; } }
     </style>
