--- a/ai-projects.html
+++ b/ai-projects.html
@@ -6,6 +6,7 @@
     <meta name="description" content="ИИ в образовании - материалы, созданные с использованием искусственного интеллекта">
     <title>ИИ в образовании | Дёмин А.Ю.</title>
     <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
             --color-primary: #003D7A;
             --color-primary-hover: #00518A;
@@ -18,51 +19,53 @@
             --color-text-primary: #2C3E50;
             --color-text-secondary: #7F8C8D;
             --color-border: #E0E6ED;
-        }
+          }
         html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+         margin: 0;
+         padding: 0;
+         height: 100%;
+         box-sizing: border-box;
+         overflow-x: hidden;
          width: 100% !important;
-    min-width: 100% !important;
-    max-width: 100% !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    box-sizing: border-box !important;
-    overflow-x: hidden !important;    
-        }
-        body {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 16px;
-            line-height: 1.6;
-            color: var(--color-text-primary);
+         min-width: 100% !important;
+         max-width: 100% !important;
+         margin: 0 !important;
+         padding: 0 !important;
+         box-sizing: border-box !important;
+         overflow-x: hidden !important;    
+       }
+          body {
+              font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+              font-size: 16px;
+              line-height: 1.6;
+              color: var(--color-text-primary);
+              background: #FFFFFF;
+              min-height: 100vh;
+              display: flex;
+              flex-direction: column;
         }
         header {
             background-color: var(--color-primary);
             color: white;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            width: 100vw;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            width: 100%;
             margin: 0;
-            padding: 0;
             left: 0;
-          width: 100% !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    left: 0 !important;
-    position: relative !important;
-    box-sizing: border-box !important;   
+            position: relative;
+            box-sizing: border-box;
+            width: 100% !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            left: 0 !important;
+            position: relative !important;
+            box-sizing: border-box !important;
         }
         .header-top {
             background-color: var(--color-primary-active);
             padding: 0.5rem 0;
-            width: 100vw;
-            margin: 0;
-            left: 0;
-            position: relative;
         }
         .header-content {
             max-width: 1200px; 
@@ -72,47 +75,85 @@
             justify-content: space-between;
             align-items: center;
         }
-        .header-title { display: flex; align-items: center; gap: 1rem; }
-        .header-photo { width: 60px; height: 60px; border-radius: 50%; object-fit: cover; border: 3px solid white; box-shadow: 0 2px 8px rgba(0,0,0,0.2); }
-        .header-title h1 { font-size: 1.5rem; font-weight: 700; }
-        .header-subtitle { font-size: 0.9rem; opacity: 0.9; }
-        .mobile-menu-toggle { display: none; background: none; border: none; color: white; font-size: 1.5rem; cursor: pointer; }
+        .header-title { 
+            display: flex; 
+            align-items: center; 
+            gap: 1rem; 
+        }
+        .header-photo { 
+            width: 60px; 
+            height: 60px; 
+            border-radius: 50%; 
+            object-fit: cover; 
+            border: 3px solid white; 
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2); 
+        }
+        .header-title h1 { 
+            font-size: 1.5rem; 
+            font-weight: 700; 
+        }
+        .header-subtitle { 
+            font-size: 0.9rem; 
+            opacity: 0.9; 
+        }
+        .mobile-menu-toggle { 
+            display: none; 
+            background: none; 
+            border: none; 
+            color: white; 
+            font-size: 1.5rem; 
+            cursor: pointer; 
+        }
         nav {
             background-color: var(--color-primary);
-            width: 100vw;
+            width: 100%;
             margin: 0;
             left: 0;
             position: relative;
-           width: 100% !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    left: 0 !important;
-    position: relative !important;
-    box-sizing: border-box !important;  
+            box-sizing: border-box;
+            width: 100% !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            left: 0 !important;
+            position: relative !important;
+            box-sizing: border-box !important;
         }
         .nav-container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 1rem;
         }
-        .nav-menu { list-style: none; display: flex; flex-wrap: wrap; gap: 0.5rem; }
-        .nav-menu a { color: white; text-decoration: none; padding: 1rem 1rem; display: block; transition: background-color 0.3s ease; border-radius: 4px 4px 0 0; }
-        .nav-menu a:hover { background-color: var(--color-primary-hover); }
-        .nav-menu a.active { background-color: var(--color-danger); }
+        .nav-menu { 
+            list-style: none; 
+            display: flex; 
+            flex-wrap: wrap; 
+            gap: 0.5rem; 
+        }
+        .nav-menu a { 
+            color: white; 
+            text-decoration: none; 
+            padding: 1rem 1rem; 
+            display: block; 
+            transition: background-color 0.3s ease; 
+            border-radius: 4px 4px 0 0; 
+        }
+        .nav-menu a:hover { 
+            background-color: var(--color-primary-hover); 
+        }
+        .nav-menu a.active { 
+            background-color: var(--color-danger); 
+        }
         main {
-            flex: 1 0 auto;
             max-width: 1200px;
             margin: 0 auto;
             padding: 3rem 1rem;
-            width: 100%;
         }
         .page-title {
             font-size: 2.5rem;
             color: var(--color-primary);
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
             padding-bottom: 1rem;
             border-bottom: 4px solid var(--color-danger);
-            text-align: center;
         }
         .page-intro { font-size: 1.1rem; margin-bottom: 2rem; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); padding: 1.5rem; border-radius: 8px; border-left: 4px solid var(--color-primary); }
         .section { margin-bottom: 3rem; }
