--- a/ai-projects.html
+++ b/ai-projects.html
@@ -157,6 +157,59 @@
             border-bottom: 4px solid var(--color-danger);
         }
         .page-intro { font-size: 1.1rem; margin-bottom: 2rem; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); padding: 1.5rem; border-radius: 8px; border-left: 4px solid var(--color-primary); }
+           .modules-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
+        }
+        .module-card {
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            border: 2px solid var(--color-border);
+            transition: all 0.3s ease;
+        }
+        .module-card:hover {
+            border-color: var(--color-primary);
+            box-shadow: 0 8px 24px rgba(0,61,122,0.15);
+            transform: translateY(-4px);
+        }
+        .module-card.featured {
+            border-color: var(--color-danger);
+            background: linear-gradient(135deg, #fff 0%, #fff5f5 100%);
+        }
+        .module-number {
+            background: var(--color-primary);
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            font-weight: 700;
+            display: inline-block;
+            margin-bottom: 1rem;
+        }
+        .module-card.featured .module-number {
+            background: var(--color-danger);
+        }
+        .module-title {
+            font-size: 1.25rem;
+            color: var(--color-primary);
+            margin-bottom: 1rem;
+            font-weight: 600;
+        }
+        .module-content ul {
+            list-style: none;
+            padding: 0;
+        }
+        .module-content ul li {
+            padding: 0.5rem 0;
+            padding-left: 1.5rem;
+            position: relative;
+        }
+        .module-content ul li::before {
+            content: "📄";
+            position: absolute;
+            left: 0;
         .section { margin-bottom: 3rem; }
         .section h2 { font-size: 2rem; color: var(--color-primary); margin-bottom: 1.5rem; }
         .card { background-color: var(--color-surface); padding: 2rem; border-radius: 8px; border-left: 4px solid var(--color-primary); margin-bottom: 2rem; }
