--- a/ai-projects.html
+++ b/ai-projects.html
@@ -212,6 +212,24 @@
         }
         @media (max-width: 768px) { .mobile-menu-toggle { display: block; } .nav-menu { display: none; flex-direction: column; } .nav-menu.active { display: flex; } }
         @media (max-width: 480px) { .header-photo { width: 50px; height: 50px; } .header-title h1 { font-size: 1.2rem; } }
+    @media (max-width: 768px) {
+    .modules-grid, .news-grid, .quick-access, .documents-grid,
+    .parents-categories-grid, .colleagues-categories-grid {
+        grid-template-columns: 1fr;
+        padding: 0;
+    }
+    main, section, .content-section, .card, .content-block {
+        padding: 0.5rem;
+        margin: 0;
+        width: 100%;
+    }
+}
+@media (max-width: 480px) {
+    main, section, .content-section, .card, .content-block {
+        padding: 0.25rem;
+        font-size: 0.95rem;
+    }
+}
     </style>
 </head>
 <body>
