--- a/ai-projects.html
+++ b/ai-projects.html
@@ -49,7 +49,7 @@
             background-color: var(--color-primary);
             color: white;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
+            position: fixed;
             top: 0;
             z-index: 1000;
             width: 100%;
@@ -243,6 +243,17 @@
         padding-right: 0;
     }
 } 
+   @media (max-width: 768px) {
+    header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+    }
+    main {
+        margin-top: 110px;
+    }
+}     
     </style>
 </head>
 <body>
