--- a/ai-projects.html
+++ b/ai-projects.html
@@ -61,7 +61,7 @@
             margin: 0 !important;
             padding: 0 !important;
             left: 0 !important;
-            position:  fixed!important;
+            position: relative !important;
             box-sizing: border-box 
         }
         .header-top {
