--- a/ai-projects.html
+++ b/ai-projects.html
@@ -49,7 +49,7 @@
             background-color: var(--color-primary);
             color: white;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: fixed;
+            position: sticky;
             top: 0;
             z-index: 1000;
             width: 100%;
@@ -61,7 +61,7 @@
             margin: 0 !important;
             padding: 0 !important;
             left: 0 !important;
-            position: fixed;
+            position: sticky ;
             box-sizing: border-box 
         }
         .header-top {
