--- a/metodika.html
+++ b/metodika.html
@@ -58,7 +58,7 @@
             margin: 0 !important;
             padding: 0 !important;
             left: 0 !important;
-            position: relative !important;
+            position: sticky;
             box-sizing: border-box !important;
         }
         .header-top {
