--- a/ai-projects.html
+++ b/ai-projects.html
@@ -104,7 +104,6 @@
             color: white; 
             font-size: 1.5rem; 
             cursor: pointer; 
-            padding: 0.5rem;
         }
         nav {
             background-color: var(--color-primary);
@@ -210,7 +209,12 @@
             font-size: 0.9rem;
             opacity: 0.8;
         }
-        @media (max-width: 768px) { .mobile-menu-toggle { display: block; } .nav-menu { display: none; flex-direction: column; } .nav-menu.active { display: flex; } }
+        @media (max-width: 768px) { 
+            .mobile-menu-toggle { display: block; } 
+            .nav-menu { display: none; flex-direction: column; } 
+            .nav-menu.active { display: flex; } 
+          .modules-grid { grid-template-columns: 1fr; }
+        }
         @media (max-width: 480px) { .header-photo { width: 50px; height: 50px; } .header-title h1 { font-size: 1.2rem; } }
     @media (max-width: 768px) {
     .modules-grid, .news-grid, .quick-access, .documents-grid,
