--- a/about.html
+++ b/about.html
@@ -89,6 +89,7 @@
             color: white;
             font-size: 1.5rem;
             cursor: pointer;
+            padding: 0.5rem;
         }
 
         nav {
