--- a/about.html
+++ b/about.html
@@ -288,9 +288,8 @@
 
         @media (max-width: 768px) {
             .mobile-menu-toggle {
-                display: block; }
-             .modules-grid { grid-template-columns: 1fr; }
-  }
+                display: block; 
+            }
             .nav-menu {
                 display: none;
                 flex-direction: column;
